<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ro.gov.stamacasa.customviews.forms.answer.AnswerInputCv
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:inputType="textCapWords"
        android:layout_height="wrap_content"
        app:label="@string/name"/>

    <ro.gov.stamacasa.customviews.forms.answer.AnswerInputCv
        android:id="@+id/phoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:label="@string/phone"/>

    <ro.gov.stamacasa.customviews.forms.answer.AnswerInputCv
        android:id="@+id/county"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/county"/>

    <ro.gov.stamacasa.customviews.forms.answer.AnswerInputCv
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/city"/>

    <ro.gov.stamacasa.customviews.forms.answer.AnswerInputCv
        android:id="@+id/ageEt"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        app:label="@string/age"/>

    <ro.gov.stamacasa.customviews.forms.answer.AnswerInputCv
        android:id="@+id/genderEt"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        />

</LinearLayout>