<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nText1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/about_version"
            android:textColor="#404040" />

        <TextView
            android:id="@+id/nText2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/about_site"
            android:textColor="#305495"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/nText3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/about_components"
            android:textColor="#404040" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>