<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:focusedByDefault="true"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:padding="20dp"
    android:fillViewport="true"
    android:background="@color/backgroundColor"
>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/nH1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_h1"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            style="@style/BodyText"
            android:id="@+id/nH2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_h2"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/nH1"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/nTag1"
            style="@style/MainQuestion"
            android:gravity="center"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/nH2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:text="@string/exit_tag1"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/nTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_title"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/nTag1"
            app:layout_constraintLeft_toLeftOf="parent"/>
        
        <EditText
            android:id="@+id/nReason"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:gravity="top"
            android:background="@drawable/rounded_corners_light"
            app:layout_constraintTop_toBottomOf="@+id/nTitle"/>

        <TextView
            android:id="@+id/nStartTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintRight_toLeftOf="@+id/nEndTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nReason"
            android:layout_marginRight="15dp"
            android:text="@string/exit_start_hour"/>

        <TextView
            android:id="@+id/nEndTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/nStartTitle"
            app:layout_constraintTop_toTopOf="@+id/nStartTitle"
            android:layout_marginLeft="15dp"
            android:text="@string/exit_end_hour"/>

        <EditText
            android:id="@+id/nStartHour"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:focusableInTouchMode="false"
            android:background="@drawable/rounded_corners_light"
            app:layout_constraintLeft_toLeftOf="@+id/nStartTitle"
            app:layout_constraintRight_toRightOf="@+id/nStartTitle"
            app:layout_constraintTop_toBottomOf="@+id/nStartTitle"/>

        <EditText
            android:id="@+id/nEndHour"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:focusableInTouchMode="false"
            android:background="@drawable/rounded_corners_light"
            app:layout_constraintLeft_toLeftOf="@+id/nEndTitle"
            app:layout_constraintRight_toRightOf="@+id/nEndTitle"
            app:layout_constraintTop_toTopOf="@+id/nStartHour"/>

        <TextView
            android:id="@+id/nTag2"
            style="@style/MainQuestion"
            android:gravity="center"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/nEndHour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:text="@string/exit_tag2"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/nAnswerNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AnswerTv"
            android:background="@drawable/rounded_corners_answer_not_selected"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nTag2"
            android:layout_marginTop="10dp"
            android:text="Nu"/>

        <TextView
            android:id="@+id/nAnswerYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AnswerTv"
            android:background="@drawable/rounded_corners_answer_not_selected"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nAnswerNo"
            android:layout_marginTop="10dp"
            android:text="Da"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nSubmit"
            style="@style/MainButton"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/add_exit"
            android:layout_marginTop="@dimen/answerMarginTop"
            app:layout_constraintTop_toBottomOf="@id/nAnswerYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>