<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fragmentCl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:paddingTop="25dp">

        <TextView
            android:id="@+id/nText"
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_info_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <TextView-->
<!--            style="@style/BodyText"-->
<!--            android:id="@+id/symptomHistoryTv"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/continueButtonMarginTop"-->
<!--            android:text="@string/symptoms_history"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintBottom_toTopOf="@id/symptomsTable"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/seeHitoryBt" />-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/completeFormBt"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/continueButtonMarginTop"
            android:text="@string/complete_form_bt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addExitBt"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/answerMarginTop"
            android:text="@string/add_exit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/completeFormBt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seeHitoryBt"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/answerMarginTop"
            android:text="@string/see_history"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addExitBt" />

        <ro.gov.stamacasa.customviews.symptomstable.SymptomsTableView
            android:id="@+id/symptomsTable"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/continueButtonMarginTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seeHitoryBt" />

        <ro.gov.stamacasa.customviews.exitstable.ExitsTableCv
            android:id="@+id/exitsTable"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_marginTop="@dimen/continueButtonMarginTop"
            app:layout_constraintTop_toBottomOf="@id/symptomsTable"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
